[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"
authors = ["Marius Gassen"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["blocking"] }
clap = { version = "4.4.12", features = ["derive"]}
dotenv = "0.15.0"
regex = "1.10.2"
